2010-07-26  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (makeinfo Configuration Variables)
	(texi2any output customization): warn that the API and 
	configuration variables may change at any time.

2010-07-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Invoking texi2any): general editing.

2010-07-26  Patrice Dumas  <pertusus@free.fr>

	* texi2html/doc/: merge the texi2html manual in the texinfo
	manual, remove the manual and the directory.
	* doc/texinfo.txi (Texi2HTML): add information taken from
	the Texi2HTML manual with a bit more history.

2010-07-25  Patrice Dumas  <pertusus@free.fr>

	* texi2html/texi2html.init (program_string): use @emph instead
	of @i in the program string.

2010-07-25  Patrice Dumas  <pertusus@free.fr>

	* texi2html/doc/texi2html.texi: reduce the texi2html manual 
	to the minimum. Keep history, differences with texi2any and
	the list of incompatibilities with past versions.

2010-07-25  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Internationalization of strings): add this node
	describing the internationalization of strings output in texi2any.

2010-07-25  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi: update the documentation of texi2any 
	customization to match the current state of the code.

2010-07-25  Karl Berry  <karl@gnu.org>

	* util/htmlxref.cnf: new file.
	* util/Makefile.am (dist_pkgdata_DATA): add it.

2010-07-24  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Generic translator texi2any/makeinfo): rename
	from "Generic converter", edit chapter intro.

2010-07-24  Patrice Dumas  <pertusus@free.fr>

	* doc/texinfo.txi (Initialization files basics): merge `Function 
	prototypes' node.
	Put 'Initializing and finalizing' below 'Initialization files 
	basics'.
	Add the information about @-commands formatting.

2010-07-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (setfilename): more about TeX behavior.
	(Invoking texi2any),
	(Pointer Validation),
	(HTML Splitting),